--- a/dev.ensoft.ecode.yml
+++ b/dev.ensoft.ecode.yml
@@ -47,7 +47,7 @@ modules:
       - premake5 gmake2
       - cd make/linux && make config="release_${ARCH}" verbose=true ecode
       - cp -r bin /app/ecode
-      - install -Dm644 libs/linux/${ARCH}/libeepp.so "${FLATPAK_DEST}/libeepp.so"
+      - install -Dm644 libs/linux/${ARCH}/libeepp.so "${FLATPAK_DEST}/lib/libeepp.so"
       - install -Dm644 projects/linux/ecode/ecode.desktop "${FLATPAK_DEST}/share/applications/ecode.desktop"
       - install -Dm644 bin/assets/icon/ecode.png "${FLATPAK_DEST}/share/icons/hicolor/128x128/apps/ecode.png"
       - ln -s "${FLATPAK_DEST}/ecode/ecode" "${FLATPAK_DEST}/bin/ecode"
